--- a/.env.example.development
+++ b/.env.example.development
@@ -1,3 +1,4 @@
+# Remove .example from the file name to use the environment variables in development
 # Example development environment variables
 VITE_QUICKBASE_REALM=
 VITE_QUICKBASE_USER_TOKEN=
