--- a/.env.example.production
+++ b/.env.example.production
@@ -1,3 +1,4 @@
+# Remove .example from the file name to use the environment variables in production
 # Example production environment variables
 VITE_QUICKBASE_REALM=
 VITE_QUICKBASE_APP_DBID=
