cmd line code page update

--- a/.env.example.development
+++ b/.env.example.development
@@ -1,4 +1,9 @@
-# Remove .example from the file name to use the environment variables in development
+#
+# Rename this file to .env.development and update the values
+#
+# These variables are used when running the app locally with `npm run dev`
+#
+
 VITE_QUICKBASE_REALM=
 VITE_QUICKBASE_USER_TOKEN=
 VITE_QUICKBASE_APP_DBID=
