--- a/.env.example.production
+++ b/.env.example.production
@@ -1,3 +1,7 @@
-# Remove .example from the file name to use the environment variables in production
+# Rename this file to .env.production and update the values
+#
+# These variables are used when building the app with `npm run build`
+#
+
 VITE_QUICKBASE_REALM=
 VITE_QUICKBASE_APP_DBID=
