--- a/package.json
+++ b/package.json
@@ -7,10 +7,15 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "quickbase": "node scripts/updateCodePage.js"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.6",
+    "@types/node": "^22.13.4",
+    "@types/puppeteer": "^5.4.7",
+    "dotenv": "^16.4.7",
+    "puppeteer": "^24.2.1",
     "quickbase": "^6.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
