--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@ dist-ssr
 .env.development
 .env.production
 scripts/screenshots-puppeteer/*
+!scripts/screenshots-puppeteer/.gitkeep
 
 # Editor directories and files
 .vscode/*
