Adding CSS to npm run quickbase script

--- a/.env.example
+++ b/.env.example
@@ -7,4 +7,5 @@ QUICKBASE_USERNAME=
 QUICKBASE_PASSWORD=
 QUICKBASE_LOGIN_URL=
 QUICKBASE_PAGE_URL=
-QUICKBASE_PAGE_ID=
+QUICKBASE_JS_PAGE_ID=
+QUICKBASE_CSS_PAGE_ID=
