--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tailwindcss/vite": "^4.0.6",
     "@types/node": "^22.13.4",
     "@types/puppeteer": "^5.4.7",
+    "chalk": "^5.4.1",
     "dotenv": "^16.4.7",
     "puppeteer": "^24.2.1",
     "quickbase": "^6.0.0",
