generate quickbase-copy.html

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,6 @@
 QUICKBASE_USERNAME=
 QUICKBASE_PASSWORD=
 QUICKBASE_LOGIN_URL=
-QUICKBASE_PAGE_URL=
+QUICKBASE_PAGE_EDIT_URL=
 QUICKBASE_JS_PAGE_IDS= # comma separated list of code page ids
 QUICKBASE_CSS_PAGE_IDS= # comma separated list of code page ids
