generate quickbase-copy.html with dynamic link and script tags with comments

--- a/.env.example
+++ b/.env.example
@@ -3,9 +3,24 @@
 # These variables are optionally used to update Code Pages in Quickbase with 'npm run quickbase'
 #
 
+# QuickBase credentials.
 QUICKBASE_USERNAME=
 QUICKBASE_PASSWORD=
+
+# Sign out of QuickBase, grab the sign in URL, and paste it here.
+# Ex: https://builderprogram-USERNAME.quickbase.com/db/main?a=SignIn
 QUICKBASE_LOGIN_URL=
+
+# Navigate to the Pages section in your app. This is the page the lists all your code pages. 
+# Ex: https://builderprogram-USERNAME.quickbase.com/nav/app/DBID/action/AppDBPages
+QUICKBASE_PAGES_URL=
+
+# Navigate to a code page in your app. This is the page where you edit an individual code page.
+# Ex: https://builderprogram-USERNAME.quickbase.com/nav/app/DBID/action/pageedit?pageID=
 QUICKBASE_PAGE_EDIT_URL=
-QUICKBASE_JS_PAGE_IDS= # comma separated list of code page ids
-QUICKBASE_CSS_PAGE_IDS= # comma separated list of code page ids
+
+# The code-page-ids can be found in the url when editing a code page in quickbase.
+# `npm run quickbase` copies production files in /dist to these code-page-id's in their listed order.
+# `npm run build` uses these lists to add <link> and <script> tags to the quickbase-copy.html page.
+QUICKBASE_JS_PAGE_IDS= # comma separated list of code page ids. ex: 3,5
+QUICKBASE_CSS_PAGE_IDS= # comma separated list of code page ids. ex: 4,6
