npm run quickbase updates the html file

--- a/.env.example
+++ b/.env.example
@@ -1,26 +1,36 @@
-# Rename this file to .env and update the values
+# Rename this file to .env and update the values.
 #
-# These variables are optionally used to update Code Pages in Quickbase with 'npm run quickbase'
+# These variables are optional for `npm run dev` `npm run build`   
+# You can run development and production without these variables.
+#
+# `npm run quickbase` these variables are required to update code pages from cmd line, but they can be updated manually.
+# `npm run build` these variables help generate the quickbase-copy.html, but it can be updated manually.
+# `npm run dev` is not effected by these variables.
 #
 
 # QuickBase credentials.
+# Used by puppeteer to sign in to QuickBase.
 QUICKBASE_USERNAME=
 QUICKBASE_PASSWORD=
 
-# Sign out of QuickBase, grab the sign in URL, and paste it here.
+# Grab the sign in URL by logging out of QuickBase, and paste it here.
+# Used by puppeteer to sign in to QuickBase.
 # Ex: https://builderprogram-USERNAME.quickbase.com/db/main?a=SignIn
 QUICKBASE_LOGIN_URL=
 
-# Navigate to the Pages section in your app. This is the page the lists all your code pages. 
-# Ex: https://builderprogram-USERNAME.quickbase.com/nav/app/DBID/action/AppDBPages
-QUICKBASE_PAGES_URL=
-
 # Navigate to a code page in your app. This is the page where you edit an individual code page.
+# Used by puppeteer to navigate to the code page to update the code.
 # Ex: https://builderprogram-USERNAME.quickbase.com/nav/app/DBID/action/pageedit?pageID=
-QUICKBASE_PAGE_EDIT_URL=
+QUICKBASE_CODEPAGE_EDIT_URL=
+
+# Navigate to the Pages section in your app. This is the page the lists all your code pages. 
+# `npm run build` quickbase-copy.html updates.
+# Ex: https://builderprogram-USERNAME.quickbase.com/nav/app/DBID/action/AppDBPages
+QUICKBASE_CODEPAGES_URL=
 
 # The code-page-ids can be found in the url when editing a code page in quickbase.
-# `npm run quickbase` copies production files in /dist to these code-page-id's in their listed order.
-# `npm run build` uses these lists to add <link> and <script> tags to the quickbase-copy.html page.
-QUICKBASE_JS_PAGE_IDS= # comma separated list of code page ids. ex: 3,5
-QUICKBASE_CSS_PAGE_IDS= # comma separated list of code page ids. ex: 4,6
+# `npm run quickbase` copies /dist files to code-pages.
+# `npm run build` quickbase-copy.html updates
+QUICKBASE_CODEPAGE_HTML_ID=
+QUICKBASE_CODEPAGE_JS_IDS= # comma separated list of code page ids. ex: 3,5
+QUICKBASE_CODEPAGE_CSS_IDS= # comma separated list of code page ids. ex: 4,6
