--- a/.env.example.production
+++ b/.env.example.production
@@ -1,6 +1,6 @@
-# Rename this file to .env.production and update the values
+# Rename this file to .env.production and update the values.
 #
-# These variables are used when building the app with `npm run build`
+# These variables are required for `npm run build`
 #
 
 VITE_QUICKBASE_REALM=
