--- a/.env.example.development
+++ b/.env.example.development
@@ -1,6 +1,6 @@
-# Rename this file to .env.development and update the values
+# Rename this file to .env.development and update the values.
 #
-# These variables are used when running the app locally with `npm run dev`
+# These variables are required for `npm run dev`
 #
 
 VITE_QUICKBASE_REALM=
