npm run quickbase html file is optional

--- a/.env.example
+++ b/.env.example
@@ -31,6 +31,6 @@ QUICKBASE_CODEPAGES_URL=
 # The code-page-ids can be found in the url when editing a code page in quickbase.
 # `npm run quickbase` copies /dist files to code-pages.
 # `npm run build` quickbase-copy.html updates
-QUICKBASE_CODEPAGE_HTML_ID=
+QUICKBASE_CODEPAGE_HTML_ID= # html code page id is optional but recommended
 QUICKBASE_CODEPAGE_JS_IDS= # comma separated list of code page ids. ex: 3,5
 QUICKBASE_CODEPAGE_CSS_IDS= # comma separated list of code page ids. ex: 4,6
