--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/puppeteer": "^5.4.7",
     "chalk": "^5.4.1",
     "dotenv": "^16.4.7",
+    "find-up": "^7.0.0",
     "puppeteer": "^24.2.1",
     "quickbase": "^6.0.0",
     "react": "^19.0.0",
