--- a/.env.example
+++ b/.env.example
@@ -14,23 +14,18 @@ QUICKBASE_USERNAME=
 QUICKBASE_PASSWORD=
 
 # Grab the sign in URL by logging out of QuickBase, and paste it here.
-# Used by puppeteer to sign in to QuickBase.
 # Ex: https://builderprogram-USERNAME.quickbase.com/db/main?a=SignIn
 QUICKBASE_LOGIN_URL=
 
 # Navigate to a code page in your app. This is the page where you edit an individual code page.
-# Used by puppeteer to navigate to the code page to update the code.
 # Ex: https://builderprogram-USERNAME.quickbase.com/nav/app/DBID/action/pageedit?pageID=
 QUICKBASE_CODEPAGE_EDIT_URL=
 
 # Navigate to the Pages section in your app. This is the page the lists all your code pages. 
-# `npm run build` quickbase-copy.html updates.
 # Ex: https://builderprogram-USERNAME.quickbase.com/nav/app/DBID/action/AppDBPages
 QUICKBASE_CODEPAGES_URL=
 
-# The code-page-ids can be found in the url when editing a code page in quickbase.
-# `npm run quickbase` copies /dist files to code-pages.
-# `npm run build` quickbase-copy.html updates
-QUICKBASE_CODEPAGE_HTML_ID= # html code page id is optional but recommended
+# The code page ids can be found in the url when editing a code page in quickbase.
+QUICKBASE_CODEPAGE_HTML_ID= # HTML code page Id is optional but recommended
 QUICKBASE_CODEPAGE_JS_IDS= # comma separated list of code page ids. ex: 3,5
 QUICKBASE_CODEPAGE_CSS_IDS= # comma separated list of code page ids. ex: 4,6
