--- a/.env.example.development
+++ b/.env.example.development
@@ -3,6 +3,25 @@
 # These variables are required for `npm run dev`
 #
 
+# Rename this file to .env.development and update the values.
+#
+# These variables are required for `npm run dev`
+#
+
+# VITE_QUICKBASE_REALM: This is your QuickBase realm name.
+# You can find it in the URL when you are logged into QuickBase.
+# For example, if your QuickBase URL is https://yourrealm.quickbase.com,
+# then your realm name is "yourrealm".
 VITE_QUICKBASE_REALM=
+
+# VITE_QUICKBASE_USER_TOKEN: This is your QuickBase user token.
+# You can generate a user token by navigating to your QuickBase account settings,
+# then selecting "User Tokens" and creating a new token.
+# Make sure to grant the token the necessary permissions for your application.
 VITE_QUICKBASE_USER_TOKEN=
+
+# VITE_QUICKBASE_APP_DBID: This is the database ID of your QuickBase application.
+# You can find it in the URL when you are viewing your app home page.
+# For example, if your application URL is https://yourrealm.quickbase.com/db/yourappdbid,
+# then your app DBID is "yourappdbid".
 VITE_QUICKBASE_APP_DBID=
