--- a/.env.example.production
+++ b/.env.example.production
@@ -2,6 +2,19 @@
 #
 # These variables are required for `npm run build`
 #
+# Rename this file to .env.production and update the values.
+#
+# These variables are required for `npm run build`
+#
 
+# VITE_QUICKBASE_REALM: This is your QuickBase realm name.
+# You can find it in the URL when you are logged into QuickBase.
+# For example, if your QuickBase URL is https://yourrealm.quickbase.com,
+# then your realm name is "yourrealm".
 VITE_QUICKBASE_REALM=
+
+# VITE_QUICKBASE_APP_DBID: This is the database ID of your QuickBase application.
+# You can find it in the URL when you are viewing your app home page.
+# For example, if your application URL is https://yourrealm.quickbase.com/db/yourappdbid,
+# then your app DBID is "yourappdbid".
 VITE_QUICKBASE_APP_DBID=
