--- a/package.json
+++ b/package.json
@@ -5,11 +5,10 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build && npm run move-index",
+    "build": "tsc -b && vite build && createHtmlCodePage && hideNodeHtml",
     "lint": "eslint .",
     "preview": "vite preview",
-    "quickbase": "node scripts/updateCodePage.js",
-    "move-index": "mkdir -p dist/unused && mv dist/index.html dist/unused/index.html"
+    "codepages": "codepages"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.6",
@@ -33,6 +32,7 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.18",
     "globals": "^15.14.0",
+    "quickbase-codepages": "^1.2.3",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.22.0",
     "vite": "^6.1.0"
