--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "qb-copy",
+  "name": "quickbase-copy",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build && createHtmlCodePage && hideNodeHtml",
+    "build": "tsc -b && vite build && createCodePageHtml && hideDefaultHtml",
     "lint": "eslint .",
     "preview": "vite preview",
     "codepages": "codepages"
@@ -32,7 +32,8 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.18",
     "globals": "^15.14.0",
-    "quickbase-codepages": "^1.2.5",
+    "install": "^0.13.0",
+    "quickbase-codepages": "^2.2.1",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.22.0",
     "vite": "^6.1.0"
